--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,15 +12,15 @@ bSupportsPortraitOrientation=False
 bSupportsUpsideDownOrientation=False
 bSupportsLandscapeLeftOrientation=True
 PreferredLandscapeOrientation=LandscapeLeft
-RemoteServerName=10.0.0.215
+RemoteServerName=10.0.0.216
 RSyncUsername=ramp
 BundleIdentifier=com.gameliftcpp.example
 EnableRemoteShaderCompile=True
 SigningCertificate=iPhone Developer: Ryan Perry (X44S8LN6MB)
 MobileProvision=GameliftTutorialCpp.mobileprovision
-bGenerateXCArchive=False
+bGenerateXCArchive=True
 SSHPrivateKeyOverridePath=C:/GameLiftTutorial/RemoteToolChainPrivate.key
-DeltaCopyInstallPath=C:/ProgramData/Microsoft/Windows/Start Menu/Programs/DeltaCopy
+DeltaCopyInstallPath=C:/Program Files/Epic Games/UE_4.22/Engine/Extras/ThirdPartyNotUE/DeltaCopy/Binaries
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/GameLiftTutorial")
@@ -79,5 +79,3 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
